--- a/build.yml
+++ b/build.yml
@@ -1,14 +1,14 @@
 metadata:
-  vendor: Miralium Research
-  name: Magnolia
-  version: v0.02
+  vendor: RMS
+  name: Arduino Day
+  version: "2024"
 
 # The PCI Vendor ID and Device ID values might require changes in order
 # for the Option ROM to be properly loaded in some environments.
 pci:
-  vendor: 0x0
-  device: 0x0
-  class: 0
+  vendor: 0x10ec
+  device: 0x8168
+  class: 0x02
   subclass: 0
   interface: 0
 
